# calendar

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/calendarapp/: urls.py  views.py
src/config/: settings.py  urls.py  views.py
src/static/styles/: base.css
src/templates/: _app.html  _base.html  _boost_app.html  index.html  nav.html
src/templates/calendarapp/: blank_schedule.html  index.html
src/templates/calendarapp/boost/: calendar.html
src/templates/calendarapp/partials/: calendar.html
src/templates/utility/toast/: error.html  success.html  warning.html
